--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,7 @@
 	{{ partial "spotlight" site.Data.spotlight2 }}
 {{ partial "gallery" site.Data.gallery }}
 {{ partial "items" site.Data.items }}
+{{ partial "spotlight" site.Data.spotlight4 }}
 {{ partial "spotlight" site.Data.spotlight3 }}
 <!--	{{ partial "elements" . }}
 	{{ partial "elements_reference" . }} -->
